--- a/openrem/remapp/templates/remapp/filteredbase.html
+++ b/openrem/remapp/templates/remapp/filteredbase.html
@@ -186,7 +186,7 @@
                                             </td>
                                             <td>
                                                 <a class="btn btn-default" onclick="loadFromLibrary()">Load</a>
-                                                <button class="btn btn-danger">Delete</button>
+                                                <a class="btn btn-danger" onclick="deleteFromLibrary()">Delete</a>
                                             </td>
                                         </tr>
                                     {% endif %}
