--- a/openrem/remapp/templates/remapp/filteredbase.html
+++ b/openrem/remapp/templates/remapp/filteredbase.html
@@ -102,16 +102,22 @@
                                         <div class="col-xs-4">
                                             <label>{{ field.label_tag }}</label>
                                         </div>
-                                        {% if "__" not in field.auto_id %}
+                                        {% if not field.field.widget.attrs.static_lookup %}
+                                            <div class="col-xs-1">
+                                                <button type="button" class="btn btn-default btn-xs" id="{{field.name}}_notToggle"
+                                                data-toggle="button" aria-pressed="false" autocomplete="off">
+                                                    not
+                                                </button>
+                                            </div>
                                             <div class="col-xs-2">
                                                 <select id="{{field.name}}_lookupType">
-                                                    <option value="">is</option>
+                                                    <option value="iexact">is</option>
                                                     <option value="icontains">contains</option>
                                                     <option value="iregex">regex</option>
                                                 </select>
                                             </div>
                                         {% endif %}
-                                        <div class="col-xs-6">
+                                        <div class="col-xs-5">
                                             {{ field.errors }}
                                             {{ field }}
                                         </div>
@@ -292,7 +298,7 @@
             </div>
         </div>
         <div style="margin-bottom: 1em;">
-            <input class="btn btn-default" name="submit" type="submit" />
+            <input class="btn btn-default" id="submitQuery" name="submit" type="submit" />
         </div>
         </form>
 
