Updating warning message to inform users that the skin dose values depend on the accuracy of the x-ray system dose and reference point and DAP values. Refs issue #933

--- a/openrem/remapp/templates/remapp/rfdetail.html
+++ b/openrem/remapp/templates/remapp/rfdetail.html
@@ -361,8 +361,9 @@
             <div class="openskin_info" id="openskin_info">
                 Skin dose maps are calculated using openSkin. Monte Carlo validation has been carried out for a Siemens
                 Artis zee system for the body section of the phantom: openSkin results were within &pm; 20&percnt; of
-                the Monte Carlo results. For other systems the results are for indication only as they have not been
-                validated.
+                the Monte Carlo results. Skin dose values depend on the accuracy of the x-ray system's dose at reference
+                point and DAP values. For other types of x-ray system the results are for indication only as they have
+                not been validated.
 
                 Contributions are welcome, see <a href="http://bitbucket.org/openskin/openskin">openSkin website</a> for
                 details.
