--- a/openrem/remapp/templates/remapp/nmfiltered.html
+++ b/openrem/remapp/templates/remapp/nmfiltered.html
@@ -148,6 +148,9 @@
 {% endblock %}
 
 {% block jsblock %}
+    <script>
+        modality = "NM";
+    </script>
 {% endblock %}
 
 {% block plotdata %}
